# aerial_robot

./: .travis.yml
aerial_robot_control/: CMakeLists.txt
aerial_robot_control/cfg/: PDGain.cfg
aerial_robot_control/launch/: quadrotor_att_testbed.launch
aerial_robot_control/scripts/: multirotor_att_test.py
aerial_robot_control/src/: flight_navigation.cpp
aerial_robot_estimation/src/: state_estimation.cpp
aerial_robot_model/: CMakeLists.txt  package.xml
aerial_robot_model/src/: transformable_aerial_robot_model.cpp
aerial_robot_model/srv/: AddExtraModule.srv
aerial_robot_msgs/: CMakeLists.txt
aerial_robot_msgs/msg/: Pid.msg
aerial_robot_nerve/stm32h7_nucleo/: .gitignore  README.md  stm32h7_nucleo.ioc
aerial_robot_simulation/: package.xml
robots/dragon/: CMakeLists.txt  flight_control_plugins.xml
robots/hydrus/: CMakeLists.txt
robots/mini_quadrotor/: CMakeLists.txt  package.xml
robots/mini_quadrotor/config/: Battery.yaml  FlightControlNMPCBodyRate.yaml  NavigationConfig.yaml  StateEstimation.yaml  rviz_config
robots/mini_quadrotor/gazebo_model/world/: simple_april_tags.world  simple_ceiling.world
robots/mini_quadrotor/launch/: bringup.launch  ceilingavoidance.launch
robots/mini_quadrotor/launch/includes/: sensors.launch.xml
robots/mini_quadrotor/script/: test.py
robots/mini_quadrotor/scripts/: ceiling_avoid.py  pyserial.py
robots/mini_quadrotor/src/: process_point_cloud.cpp  process_pointcloud.cpp
robots/mini_quadrotor/urdf/: robot.gazebo.xacro  robot.urdf.xacro
robots/mini_quadrotor/urdf/mesh/: realSense_t265.STL
(+169 files in other folders)
